RESOLVED FIXED170946
Break Document::m_associatedFormControls reference cycle.
https://bugs.webkit.org/show_bug.cgi?id=170946
Summary Break Document::m_associatedFormControls reference cycle.
Andreas Kling
Reported 2017-04-18 08:40:28 PDT
There's a possible reference cycle between Document and its form elements if the Document gets detached from its frame before the timer started in didAssociateFormControls() fires.
Attachments
Patch (1.38 KB, patch)
2017-04-18 08:41 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2017-04-18 08:41:05 PDT
WebKit Commit Bot
Comment 2 2017-04-18 09:34:15 PDT
Comment on attachment 307384 [details] Patch Clearing flags on attachment: 307384 Committed r215465: <http://trac.webkit.org/changeset/215465>
WebKit Commit Bot
Comment 3 2017-04-18 09:34:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.